--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: '3.7'
 
 services:
 
@@ -13,3 +13,4 @@ services:
     environment:
       - FLASK_APP=project/__init__.py
       - FLASK_ENV=development
+      - APP_SETTINGS=project.config.DevelopmentConfig  # new
