--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,18 @@ services:
     environment:
       - FLASK_APP=project/__init__.py
       - FLASK_ENV=development
-      - APP_SETTINGS=project.config.DevelopmentConfig  # new
+      - APP_SETTINGS=project.config.DevelopmentConfig
+      - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_dev  # new
+      - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test  # new
+    depends_on:  # new
+      - users-db
+
+  users-db:  # new
+    build:
+      context: ./services/users/project/db
+      dockerfile: Dockerfile
+    ports:
+      - 5435:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
