add production file

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -5,7 +5,7 @@ services:
   users:
     build:
       context: ./services/users
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile-prod
     ports:
       - 5001:5000
     environment:
