--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -7,7 +7,8 @@ services:
       context: ./services/users
       dockerfile: Dockerfile-prod
     ports:
-      - 5001:5000
+      expose:
+        - 5000
     environment:
       - FLASK_ENV=production
       - APP_SETTINGS=project.config.ProductionConfig
@@ -21,7 +22,8 @@ services:
       context: ./services/users/project/db
       dockerfile: Dockerfile
     ports:
-      - 5435:5432
+      expose:
+        - 5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
