--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -6,8 +6,9 @@ services:
     build:
       context: ./services/users
       dockerfile: Dockerfile-prod
-    expose:
-      - 5000
+    ports:
+      expose:
+        - 5000
     environment:
       - FLASK_ENV=production
       - APP_SETTINGS=project.config.ProductionConfig
@@ -20,8 +21,9 @@ services:
     build:
       context: ./services/users/project/db
       dockerfile: Dockerfile
-    expose:
-      - 5432
+    ports:
+      expose:
+        - 5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
