--- a/services/nginx/prod.conf
+++ b/services/nginx/prod.conf
@@ -2,7 +2,7 @@ server {
 
   listen 80;
 
-  location / {
+  location  {
     proxy_pass        http://users:5000;
     proxy_redirect    default;
     proxy_set_header  Host $host;
