--- a/services/nginx/prod.conf
+++ b/services/nginx/prod.conf
@@ -5,7 +5,7 @@ server {
   location / {
     proxy_pass        http://users:5000;
     proxy_redirect    default;
-    proxy_set_header  Host $host;
+    proxy_set_header  Host 192.168.81.128;
     proxy_set_header  X-Real-IP $remote_addr;
     proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header  X-Forwarded-Host $server_name;
