--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: Dockerfile-prod
     ports:
      - 5001:5000
+    expose:
+     - 5000
     environment:
       - FLASK_ENV=production
       - APP_SETTINGS=project.config.ProductionConfig
@@ -22,6 +24,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5435:5432
+    expose:
+      - 5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
