--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - './services/users:/usr/src/app'
-    ports:
-      - 5000:5000
+    expose:
+      - 5000
     environment:
       - FLASK_ENV=development
       - APP_SETTINGS=project.config.DevelopmentConfig
@@ -22,8 +22,8 @@ services:
     build:
       context: ./services/users/project/db
       dockerfile: Dockerfile
-    ports:
-      - 5435:5432
+    expose:
+      - 5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
@@ -33,6 +33,6 @@ services:
       dockerfile: Dockerfile
     restart: always
     ports:
-      - 81:81
+      - 80:80
     depends_on:
       - users
