--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 
 before_script:
   - docker-compose up -d --build
+  - sleep 30s
 
 script:
   - docker-compose exec users python manage.py test
