--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       - DATABASE_URL=postgres://postgres:postgres@users-db:5432/users_dev
       - DATABASE_TEST_URL=postgres://postgres:postgres@users-db:5432/users_test
     depends_on:  # new
-      - users-db:
-          condition: service_healthy
+      users-db:
+        condition: service_healthy
 
   users-db:  # new
     build:
