--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 
 before_script:
+  - export REACT_APP_USERS_SERVICE_URL=http://127.0.0.1 # new
   - docker-compose up -d --build
 
 script:
