--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -35,18 +35,17 @@ services:
       - 80:80
     depends_on:
       - users
+      - client
 
   client:
+    container_name: client
     build:
       context: ./services/client
-      dockerfile: Dockerfile
-    volumes:
-      - './services/client:/usr/src/app'
-      - '/usr/src/app/node_modules'
+      dockerfile: Dockerfile-prod
+      args:
+        - NODE_ENV=production
+        - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
     ports:
-      - 3007:3000
-    environment:
-      - NODE_ENV=development
-      - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
+      - '3007:80'
     depends_on:
       - users
