tryed change for local build

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -38,14 +38,13 @@ services:
       - client
 
   client:
-    container_name: client
     build:
       context: ./services/client
       dockerfile: Dockerfile-prod
       args:
         - NODE_ENV=production
         - REACT_APP_USERS_SERVICE_URL=${REACT_APP_USERS_SERVICE_URL}
-    ports:
-      - '3007:80'
+    expose:
+      - 80
     depends_on:
       - users
